...
          : undefined
      }
      compact={compact}
      transparent={transparent}
      containerStyle={containerStyle}
      onPress={() => router.push(hasBoard ? routes.controlBattery : routes.addBoard)}
      testID="battery-bar"
    />
  )
}

